fix mysql connection

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,4 @@
+DSN=root:@tcp(127.0.0.1:3306)/mooove_db?parseTime=true&loc=Local
 PORT=8080
-
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASS=
-DB_NAME=mooove_db
-
 JWT_SECRET=verymooove123
+STORAGE_DIR=./storage
