--- a/mooove/package.json
+++ b/mooove/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
+    "@react-navigation/bottom-tabs": "^7.8.9",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.2",
     "expo": "~54.0.25",
