--- a/mooove/package.json
+++ b/mooove/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.8.9",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.2",
+    "axios": "^1.13.2",
     "expo": "~54.0.25",
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
